# agent-cli

./: Cargo.toml  build.rs
src/: main.rs
src/protos/: github.com.michaelhenkel.config_controller.pkg.apis.v1.rs  k8s.io.api.core.v1.rs  k8s.io.apimachinery.pkg.api.resource.rs  k8s.io.apimachinery.pkg.apis.meta.v1.rs  mod.rs  ssd_git.juniper.net.contrail.cn2.contrail.pkg.apis.core.v1alpha1.rs
