[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "^1"
# TODO: once published to crates.io, use 3.0.0 there
clap = { git = "https://github.com/clap-rs/clap/", version = "3.0.0-beta.1" }
#clishe = "0.2.4"
paste = "^0"
rustyline = { version = "^5", optional = true }
shellwords = { version = "^1", optional = true }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"
